--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     window.onload = function() {
       // Initialize LIFF app with login required
-      liff.init({ liffId: 'xxx' })
+      liff.init({ liffId: '2008459449-pEMd2ak4' })
         .then(() => {
           if (!liff.isLoggedIn()) {
             liff.login();
