--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     window.onload = function() {
       // Initialize LIFF app with login required
-      liff.init({ liffId: '2008474175-wM4R5aoq' })
+      liff.init({ liffId: '2008474175-w138dnav' })
         .then(() => {
           if (!liff.isLoggedIn()) {
             liff.login();
